[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Enemis/3/planes_05A-4.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemis/3/planes_05A-2.png" type="Texture" id=2]
[ext_resource path="res://scripts/Enemies/EnemyZigZag.gd" type="Script" id=3]
[ext_resource path="res://scenes/Effects/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Weapons/normalShoot/ShootEnemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Enemis/3/planes_05A-1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemis/3/planes_05A-3.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 1 ) ],
"loop": true,
"name": "vertical",
"speed": 5.0
} ]

[node name="EnemyZigZag" type="Area2D" groups=["enemy"]]
position = Vector2( 300, 50 )
scale = Vector2( 2.5, 2.5 )
script = ExtResource( 3 )
Explosion = ExtResource( 4 )
Shoot = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "vertical"
flip_v = true

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 3 )
polygon = PoolVector2Array( 0, 9, -3.33333, 4, -5.33333, -7.66667, -11, -6.66667, -11.3333, -9, -6, -13, 6, -12.6667, 11.3333, -9, 10.3333, -7.33333, 6.33334, -8 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.19209e-07, 3 )
scale = Vector2( 1.3, 1.3 )

[node name="ExplosionSpawn" type="Position2D" parent="."]
position = Vector2( 0, 14 )

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
